--- a/ChazeFashion/templates/base.html
+++ b/ChazeFashion/templates/base.html
@@ -24,6 +24,7 @@
                     {% if user.is_authenticated %}
                         <li><a href="{% url 'wishlist' %}">Wishlist</a></li>
                         <li><a href="{% url 'profile' %}">Profile</a></li>
+                        <li><a href="{% url 'cart' %}">View Cart</a></li>
                     {% endif %}
                 </ul>
             </div>
