--- a/ChazeFashion/templates/catalog/product_list.html
+++ b/ChazeFashion/templates/catalog/product_list.html
@@ -92,6 +92,19 @@
                 </div>
             </div>
         </div>
+
+        {% for product in products %}
+        <div>
+            <h3>{{ product.name }}</h3>
+            <p>₹{{ product.price }}</p>
+
+            <form method="post" action="{% url 'add_to_cart' product.id %}">
+            {% csrf_token %}
+            <button type="submit">Add to Cart</button>
+            </form>
+        </div>
+        {% endfor %}
+
         
         <!-- Products Grid -->
         <div class="lg:col-span-3">
